--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html>
+<!DOCcTYPE html>
+<!--
+	Copyright Notice
+-->
 <head>
 	<title>An Example Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
