--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright Notice
 -->
 <head>
-	<title>An Example Website</title>
+	<title>A Respectful Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+		 I am not sure what goes here	
 		</p>
 	</main>
 	<footer class="container">
